--- a/index.html
+++ b/index.html
@@ -7,12 +7,12 @@
     <link rel="stylesheet" href="./css/style.css">
 </head>
 <body>
-    <div class="holder">
+<div class="holder flex-item">
     <div class="item item-1">1</div>
     <div class="item item-2">2</div>
     <div class="item item-3">3</div>
     <div class="item item-4">4</div>
     <div class="item item-5">5</div>
-    </div>
+</div>
 </body>
 </html>
